--- a/app/views/jobs/show.html.haml
+++ b/app/views/jobs/show.html.haml
@@ -2,7 +2,7 @@
 %p= @job.title 
 %p= @job.description
 %p= @job.company
-
+= button_to "Apply for job" , @job.url
 = link_to "Home" , root_path
 = link_to "Edit", edit_job_path(@job)
 -# = link_to "Delete", job_path(@job), method: :delete, data: {confirm : "are you sure?"}
