--- a/app/views/jobs/index.html.haml
+++ b/app/views/jobs/index.html.haml
@@ -1,5 +1,5 @@
 - @jobs.each do |job|
-  %h1= link_to job.title, job
+  %h1= link_to job.title, job_path(job)
   %p= job.company
 
-= link_to "New Job", new_job_path
+= link_to "New Job", new_job_path 
